[package]
name = "erc20-counter-methods"
version = { workspace = true }
edition = { workspace = true }

[package.metadata.risc0]
methods = ["guest"]

[build-dependencies]
hex = { workspace = true }
risc0-build = { workspace = true }
risc0-build-ethereum = { git = "https://github.com/risc0/risc0-ethereum", branch = "release-1.1" }
risc0-zkp = { workspace = true }

[dev-dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
risc0-zkvm = { workspace = true, features = ["client"] }


[dependencies]
risc0-zkvm = "1.2"
risc0-build = "1.2"
